second lesson done

--- a/learning-makemore.ipynb
+++ b/learning-makemore.ipynb
@@ -430,43 +430,525 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 145,
    "id": "ec31e740-f395-48f1-9aff-8bbf16c767e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0],\n",
-       "        [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0]])"
+       "tensor([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import torch.nn.functional as F\n",
-    "xenc = F.one_hot(xs, num_classes=27)\n",
+    "xenc = F.one_hot(xs, num_classes=27).float()\n",
     "xenc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "id": "a377fcfe-8c20-43dc-9cc4-0ce44e89426c",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.int64"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xenc.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "d61e83ee-2192-4a6d-b4c6-e1a5482d5894",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0164, 0.0098, 0.1384, 0.0024, 0.2656, 0.0106, 0.0038, 0.0092, 0.0805,\n",
+       "         0.0085, 0.0197, 0.0098, 0.0120, 0.1949, 0.0646, 0.0214, 0.0235, 0.0106,\n",
+       "         0.0229, 0.0161, 0.0087, 0.0139, 0.0086, 0.0081, 0.0048, 0.0062, 0.0088],\n",
+       "        [0.0279, 0.0579, 0.0631, 0.0042, 0.0171, 0.0059, 0.0346, 0.0449, 0.0037,\n",
+       "         0.0022, 0.0325, 0.0222, 0.0395, 0.0830, 0.0827, 0.0828, 0.0244, 0.1246,\n",
+       "         0.0514, 0.0422, 0.0422, 0.0089, 0.0439, 0.0073, 0.0067, 0.0115, 0.0326],\n",
+       "        [0.0251, 0.0459, 0.0027, 0.0606, 0.0350, 0.0278, 0.1271, 0.3161, 0.0140,\n",
+       "         0.0091, 0.0173, 0.0085, 0.0066, 0.0528, 0.0148, 0.0183, 0.0133, 0.0038,\n",
+       "         0.0147, 0.0081, 0.0182, 0.0097, 0.0069, 0.0291, 0.0158, 0.0425, 0.0561],\n",
+       "        [0.0251, 0.0459, 0.0027, 0.0606, 0.0350, 0.0278, 0.1271, 0.3161, 0.0140,\n",
+       "         0.0091, 0.0173, 0.0085, 0.0066, 0.0528, 0.0148, 0.0183, 0.0133, 0.0038,\n",
+       "         0.0147, 0.0081, 0.0182, 0.0097, 0.0069, 0.0291, 0.0158, 0.0425, 0.0561],\n",
+       "        [0.0527, 0.0382, 0.0501, 0.0389, 0.0643, 0.0235, 0.0597, 0.0362, 0.0442,\n",
+       "         0.0121, 0.1211, 0.0364, 0.0453, 0.0361, 0.0154, 0.0101, 0.0162, 0.0071,\n",
+       "         0.0366, 0.0226, 0.0073, 0.0053, 0.0390, 0.0178, 0.0134, 0.0831, 0.0673]])"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W = torch.randn((27, 27))\n",
+    "logits = xenc @ W # log-counts\n",
+    "counts = logits.exp()\n",
+    "probs = counts / counts.sum(1, keepdims=True)\n",
+    "probs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "c3d753f7-9929-43b6-9386-de23c742c076",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.)"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probs[0].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "341b8ef6-71e2-496e-8e8b-6e8fabfc1270",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Putting it all together\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "W = torch.randn((27, 27), generator=g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "2ad65002-7a7f-4c2b-a557-39862d5435d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xenc = F.one_hot(xs, num_classes=27).float()\n",
+    "logits = xenc @ W\n",
+    "counts = logits.exp()\n",
+    "probs = counts / counts.sum(1, keepdims=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "679f178f-d608-412c-9214-9a1c0b0b285c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 27])"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "cecbf8d2-cfc1-4214-b4fd-9a66256f2bbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------\n",
+      "bigram example 1: .e (indexes 0,5)\n",
+      "output probabilities from the nueral net: tensor([0.0607, 0.0100, 0.0123, 0.0042, 0.0168, 0.0123, 0.0027, 0.0232, 0.0137,\n",
+      "        0.0313, 0.0079, 0.0278, 0.0091, 0.0082, 0.0500, 0.2378, 0.0603, 0.0025,\n",
+      "        0.0249, 0.0055, 0.0339, 0.0109, 0.0029, 0.0198, 0.0118, 0.1537, 0.1459],\n",
+      "       grad_fn=<SelectBackward0>)\n",
+      "label (actual next character): 5\n",
+      "probabilty assiged to the net to the correct character: 0.01228625513613224\n",
+      "log likelihood: -4.399273872375488\n",
+      "negative log likelihood: 4.399273872375488\n",
+      "---------------------\n",
+      "bigram example 2: em (indexes 5,13)\n",
+      "output probabilities from the nueral net: tensor([0.0290, 0.0796, 0.0248, 0.0521, 0.1989, 0.0289, 0.0094, 0.0335, 0.0097,\n",
+      "        0.0301, 0.0702, 0.0228, 0.0115, 0.0181, 0.0108, 0.0315, 0.0291, 0.0045,\n",
+      "        0.0916, 0.0215, 0.0486, 0.0300, 0.0501, 0.0027, 0.0118, 0.0022, 0.0472],\n",
+      "       grad_fn=<SelectBackward0>)\n",
+      "label (actual next character): 13\n",
+      "probabilty assiged to the net to the correct character: 0.018050700426101685\n",
+      "log likelihood: -4.014570713043213\n",
+      "negative log likelihood: 4.014570713043213\n",
+      "---------------------\n",
+      "bigram example 3: mm (indexes 13,13)\n",
+      "output probabilities from the nueral net: tensor([0.0312, 0.0737, 0.0484, 0.0333, 0.0674, 0.0200, 0.0263, 0.0249, 0.1226,\n",
+      "        0.0164, 0.0075, 0.0789, 0.0131, 0.0267, 0.0147, 0.0112, 0.0585, 0.0121,\n",
+      "        0.0650, 0.0058, 0.0208, 0.0078, 0.0133, 0.0203, 0.1204, 0.0469, 0.0126],\n",
+      "       grad_fn=<SelectBackward0>)\n",
+      "label (actual next character): 13\n",
+      "probabilty assiged to the net to the correct character: 0.026691533625125885\n",
+      "log likelihood: -3.623408794403076\n",
+      "negative log likelihood: 3.623408794403076\n",
+      "---------------------\n",
+      "bigram example 4: ma (indexes 13,1)\n",
+      "output probabilities from the nueral net: tensor([0.0312, 0.0737, 0.0484, 0.0333, 0.0674, 0.0200, 0.0263, 0.0249, 0.1226,\n",
+      "        0.0164, 0.0075, 0.0789, 0.0131, 0.0267, 0.0147, 0.0112, 0.0585, 0.0121,\n",
+      "        0.0650, 0.0058, 0.0208, 0.0078, 0.0133, 0.0203, 0.1204, 0.0469, 0.0126],\n",
+      "       grad_fn=<SelectBackward0>)\n",
+      "label (actual next character): 1\n",
+      "probabilty assiged to the net to the correct character: 0.07367686182260513\n",
+      "log likelihood: -2.6080665588378906\n",
+      "negative log likelihood: 2.6080665588378906\n",
+      "---------------------\n",
+      "bigram example 5: a. (indexes 1,0)\n",
+      "output probabilities from the nueral net: tensor([0.0150, 0.0086, 0.0396, 0.0100, 0.0606, 0.0308, 0.1084, 0.0131, 0.0125,\n",
+      "        0.0048, 0.1024, 0.0086, 0.0988, 0.0112, 0.0232, 0.0207, 0.0408, 0.0078,\n",
+      "        0.0899, 0.0531, 0.0463, 0.0309, 0.0051, 0.0329, 0.0654, 0.0503, 0.0091],\n",
+      "       grad_fn=<SelectBackward0>)\n",
+      "label (actual next character): 0\n",
+      "probabilty assiged to the net to the correct character: 0.014977526850998402\n",
+      "log likelihood: -4.201204299926758\n",
+      "negative log likelihood: 4.201204299926758\n",
+      "=====================\n",
+      "avg negative log liklihood, i.e. loss= 3.7693049907684326\n"
+     ]
+    }
+   ],
+   "source": [
+    "nlls = torch.zeros(5)\n",
+    "\n",
+    "for i in range(5):\n",
+    "    x = xs[i].item()\n",
+    "    y = ys[i].item()\n",
+    "    print('---------------------')\n",
+    "    print(f'bigram example {i+1}: {itos[x]}{itos[y]} (indexes {x},{y})')\n",
+    "    print('output probabilities from the nueral net:', probs[i])\n",
+    "    print('label (actual next character):', y)\n",
+    "    p = probs[i, y]\n",
+    "    print('probabilty assiged to the net to the correct character:', p.item())\n",
+    "    logp = torch.log(p)\n",
+    "    print('log likelihood:', logp.item())\n",
+    "    nll = -logp\n",
+    "    print('negative log likelihood:', nll.item())\n",
+    "    nlls[i] = nll\n",
+    "\n",
+    "print('=====================')\n",
+    "print('avg negative log liklihood, i.e. loss=', nlls.mean().item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "d7e5f69d-2342-44d4-9dc7-ef717a638919",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#=============== Optimization =================\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "W = torch.randn((27, 27), generator=g, requires_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "fd1f143d-a318-4601-af81-35a91e8f95d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xenc = F.one_hot(xs, num_classes=27).float()\n",
+    "logits = xenc @ W\n",
+    "counts = logits.exp()\n",
+    "probs = counts / counts.sum(1, keepdims=True)\n",
+    "loss = -probs[torch.arange(5), ys].log().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "0eefd979-034a-42e5-b0c9-b7925bfe637f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.7492127418518066\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d4cae1f-83ca-40bd-bf43-44b76be3d526",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# backwards pass\n",
+    "W.grad = None\n",
+    "loss.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "78b1560f-53e6-4e63-8766-87ab93884059",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W.data += -0.1 * W.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a63ed838-7cf9-40e5-9812-b21bbd2a7cda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Putting it all together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "id": "b9f9d999-3494-4374-b08c-cc7c075e2991",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create the dataset\n",
+    "xs, ys = [], []\n",
+    "\n",
+    "for w in words:\n",
+    "    chs = ['.'] + list(w) + ['.']\n",
+    "    for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "        idx1 = stoi[ch1]\n",
+    "        idx2 = stoi[ch2]\n",
+    "        xs.append(idx1)\n",
+    "        ys.append(idx2)\n",
+    "\n",
+    "xs = torch.tensor(xs)\n",
+    "ys = torch.tensor(ys)\n",
+    "num = xs.nelement()\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "W = torch.randn((27, 27), generator=g, requires_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "ad9e5f21-04b4-4c72-9497-177bbd0b089b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.483029842376709\n",
+      "2.482990026473999\n",
+      "2.4829537868499756\n",
+      "2.482919216156006\n",
+      "2.48288631439209\n",
+      "2.4828548431396484\n",
+      "2.4828248023986816\n",
+      "2.482795476913452\n",
+      "2.4827678203582764\n",
+      "2.482740640640259\n",
+      "2.4827141761779785\n",
+      "2.4826886653900146\n",
+      "2.482663869857788\n",
+      "2.482640027999878\n",
+      "2.482616424560547\n",
+      "2.482593536376953\n",
+      "2.4825711250305176\n",
+      "2.4825494289398193\n",
+      "2.4825282096862793\n",
+      "2.4825077056884766\n",
+      "2.482487440109253\n",
+      "2.4824674129486084\n",
+      "2.482447862625122\n",
+      "2.482429027557373\n",
+      "2.482410430908203\n",
+      "2.4823920726776123\n",
+      "2.4823741912841797\n",
+      "2.4823570251464844\n",
+      "2.48233962059021\n",
+      "2.4823226928710938\n",
+      "2.482306480407715\n",
+      "2.482290506362915\n",
+      "2.4822747707366943\n",
+      "2.4822585582733154\n",
+      "2.482243299484253\n",
+      "2.4822282791137695\n",
+      "2.482213258743286\n",
+      "2.482198476791382\n",
+      "2.482184410095215\n",
+      "2.482170343399048\n",
+      "2.482156276702881\n",
+      "2.482142925262451\n",
+      "2.4821293354034424\n",
+      "2.482116222381592\n",
+      "2.482103109359741\n",
+      "2.4820902347564697\n",
+      "2.4820775985717773\n",
+      "2.482065200805664\n",
+      "2.482052803039551\n",
+      "2.4820406436920166\n",
+      "2.4820287227630615\n",
+      "2.4820170402526855\n",
+      "2.4820053577423096\n",
+      "2.4819936752319336\n",
+      "2.481982707977295\n",
+      "2.4819717407226562\n",
+      "2.4819602966308594\n",
+      "2.481949806213379\n",
+      "2.4819390773773193\n",
+      "2.481928586959839\n",
+      "2.4819183349609375\n",
+      "2.481907844543457\n",
+      "2.4818975925445557\n",
+      "2.4818875789642334\n",
+      "2.481877565383911\n",
+      "2.481867790222168\n",
+      "2.481858253479004\n",
+      "2.4818484783172607\n",
+      "2.481839656829834\n",
+      "2.481829881668091\n",
+      "2.481820821762085\n",
+      "2.481811761856079\n",
+      "2.481802463531494\n",
+      "2.4817936420440674\n",
+      "2.4817845821380615\n",
+      "2.481776237487793\n",
+      "2.4817678928375244\n",
+      "2.4817593097686768\n",
+      "2.48175048828125\n",
+      "2.4817423820495605\n",
+      "2.481734275817871\n",
+      "2.4817261695861816\n",
+      "2.481718063354492\n",
+      "2.481710195541382\n",
+      "2.4817020893096924\n",
+      "2.4816946983337402\n",
+      "2.481686592102051\n",
+      "2.4816792011260986\n",
+      "2.4816715717315674\n",
+      "2.4816641807556152\n",
+      "2.481656551361084\n",
+      "2.481649398803711\n",
+      "2.4816417694091797\n",
+      "2.4816348552703857\n",
+      "2.4816277027130127\n",
+      "2.481621026992798\n",
+      "2.4816136360168457\n",
+      "2.481606960296631\n",
+      "2.481600046157837\n",
+      "2.481593132019043\n"
+     ]
+    }
+   ],
+   "source": [
+    "# gradient descent\n",
+    "\n",
+    "for k in range(100):\n",
+    "    # forward pass\n",
+    "    xenc = F.one_hot(xs, num_classes=27).float()\n",
+    "    logits = xenc @ W\n",
+    "    counts = logits.exp()\n",
+    "    probs = counts / counts.sum(1, keepdims=True)\n",
+    "    loss = -probs[torch.arange(num), ys].log().mean() + 0.01*(W**2).mean()\n",
+    "    print(loss.item())\n",
+    "\n",
+    "    # backwards pass\n",
+    "    W.grad = None\n",
+    "    loss.backward()\n",
+    "\n",
+    "    W.data += -50 * W.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "d4e7e5bd-2572-4118-b71f-349bafb2810b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cexze.\n",
+      "momasurailezityha.\n",
+      "konimittain.\n",
+      "llayn.\n",
+      "ka.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# finally, sample from the 'neural net' model\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "\n",
+    "for i in range(5):\n",
+    "    out = []\n",
+    "    idx = 0\n",
+    "\n",
+    "    while True:        \n",
+    "        xenc = F.one_hot(torch.tensor([idx]), num_classes=27).float()\n",
+    "        logits = xenc @ W\n",
+    "        counts = logits.exp()\n",
+    "        p = counts / counts.sum(1, keepdims=True)\n",
+    "\n",
+    "        idx = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
+    "        out.append(itos[idx])\n",
+    "        if idx == 0:\n",
+    "            break\n",
+    "    print(''.join(out))"
+   ]
   }
  ],
  "metadata": {
