half way through

--- a/learning-makemore.ipynb
+++ b/learning-makemore.ipynb
@@ -160,7 +160,9 @@
    "cell_type": "code",
    "execution_count": 51,
    "id": "cfa686ac-2ae5-469c-ad0f-54fed4e14574",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
