--- a/makemore-manual-backprop.ipynb
+++ b/makemore-manual-backprop.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "id": "29792bdf-8497-4318-98b6-6659344a24d3",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,10 @@
      "output_type": "stream",
      "text": [
       "logprobs        | exact: True  | approximate: True  | maxdiff: 0.0\n",
-      "probs           | exact: True  | approximate: True  | maxdiff: 0.0\n"
+      "probs           | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "counts_sum_inv  | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "counts_sum      | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "counts          | exact: True  | approximate: True  | maxdiff: 0.0\n"
      ]
     }
    ],
@@ -243,13 +246,21 @@
     "\n",
     "dprobs = (1.0/probs) * dlogprobs\n",
     "\n",
-    "dcounts_sum_inv\n",
+    "dcounts_sum_inv = (counts * dprobs).sum(1, keepdim=True)\n",
+    "\n",
+    "dcounts = counts_sum_inv * dprobs\n",
+    "\n",
+    "dcounts_sum = (-counts_sum**-2) * dcounts_sum_inv\n",
+    "\n",
+    "dcounts += torch.ones_like(counts) * dcounts_sum\n",
+    "\n",
+    "dn\n",
     "\n",
     "cmp('logprobs', dlogprobs, logprobs)\n",
     "cmp('probs', dprobs, probs)\n",
-    "#cmp('counts_sum_inv', dcounts_sum_inv, counts_sum_inv)\n",
-    "#cmp('counts_sum', dcounts_sum, counts_sum)\n",
-    "#cmp('counts', dcounts, counts)\n",
+    "cmp('counts_sum_inv', dcounts_sum_inv, counts_sum_inv)\n",
+    "cmp('counts_sum', dcounts_sum, counts_sum)\n",
+    "cmp('counts', dcounts, counts)\n",
     "#cmp('norm_logits', dnorm_logits, norm_logits)\n",
     "#cmp('logit_maxes', dlogit_maxes, logit_maxes)\n",
     "#cmp('logits', dlogits, logits)\n",
