half way through

--- a/makemore_pt5.ipynb
+++ b/makemore_pt5.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 101,
    "id": "20acfb5b-1660-46da-987a-45fb98452bdf",
    "metadata": {},
    "outputs": [
@@ -74,15 +74,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([182441, 3]) torch.Size([182441])\n",
-      "torch.Size([22902, 3]) torch.Size([22902])\n",
-      "torch.Size([22803, 3]) torch.Size([22803])\n"
+      "torch.Size([182484, 8]) torch.Size([182484])\n",
+      "torch.Size([22869, 8]) torch.Size([22869])\n",
+      "torch.Size([22793, 8]) torch.Size([22793])\n"
      ]
     }
    ],
    "source": [
     "# build the dataset\n",
-    "block_size = 3\n",
+    "block_size = 8\n",
     "\n",
     "def build_dataset(words):    \n",
     "    X, Y = [], []\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 102,
    "id": "a3000e3a-3c1d-4805-9621-283a5d50aa17",
    "metadata": {},
    "outputs": [
@@ -122,26 +122,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "... ----> e\n",
-      "..e ----> l\n",
-      ".el ----> i\n",
-      "eli ----> a\n",
-      "lia ----> n\n",
-      "ian ----> y\n",
-      "any ----> s\n",
-      "nys ----> .\n",
-      "... ----> t\n",
-      "..t ----> r\n",
-      ".tr ----> o\n",
-      "tro ----> y\n",
-      "roy ----> .\n",
-      "... ----> m\n",
-      "..m ----> a\n",
-      ".ma ----> r\n",
-      "mar ----> k\n",
-      "ark ----> u\n",
-      "rku ----> s\n",
-      "kus ----> .\n"
+      "........ ----> j\n",
+      ".......j ----> a\n",
+      "......ja ----> y\n",
+      ".....jay ----> r\n",
+      "....jayr ----> i\n",
+      "...jayri ----> e\n",
+      "..jayrie ----> l\n",
+      ".jayriel ----> .\n",
+      "........ ----> j\n",
+      ".......j ----> a\n",
+      "......ja ----> x\n",
+      ".....jax ----> l\n",
+      "....jaxl ----> y\n",
+      "...jaxly ----> n\n",
+      "..jaxlyn ----> n\n",
+      ".jaxlynn ----> .\n",
+      "........ ----> o\n",
+      ".......o ----> a\n",
+      "......oa ----> k\n",
+      ".....oak ----> l\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 103,
    "id": "875dc416-e61b-4bd9-8213-05c8ab3e8e8c",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 104,
    "id": "afe4d549-9606-42e2-9c79-f53daec08568",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
        "<torch._C.Generator at 0x7f4e87056310>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 105,
    "id": "b2c84c6e-d1a8-4c80-8980-9d3d52b8518d",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12097\n"
+      "22097\n"
      ]
     }
    ],
@@ -305,6 +305,14 @@
     "for p in parameters:\n",
     "    p.requires_grad = True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b3290c3-a310-41e0-bff2-8c1cc834cfe2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
