--- a/makemore_pt3.ipynb
+++ b/makemore_pt3.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "5cedaf61-a274-4f1e-b667-1faf034ecbb8",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,16 @@
       "  70000/ 200000: 1.7636\n",
       "  80000/ 200000: 2.0897\n",
       "  90000/ 200000: 2.1655\n",
-      " 100000/ 200000: 2.0824\n"
+      " 100000/ 200000: 2.0824\n",
+      " 110000/ 200000: 1.6457\n",
+      " 120000/ 200000: 2.5893\n",
+      " 130000/ 200000: 2.0078\n",
+      " 140000/ 200000: 1.8614\n",
+      " 150000/ 200000: 2.2410\n",
+      " 160000/ 200000: 1.7591\n",
+      " 170000/ 200000: 1.9487\n",
+      " 180000/ 200000: 2.3466\n",
+      " 190000/ 200000: 2.1723\n"
      ]
     }
    ],
@@ -217,15 +226,16 @@
     "    # forward pass\n",
     "    emb = C[Xb]\n",
     "    embcat = emb.view(emb.shape[0], -1)\n",
+    "    # Linear layer\n",
     "    hpreact = embcat @ W1 + b1\n",
+    "    # Batch normalizatino\n",
     "    bnmeani = hpreact.mean(0, keepdim=True)\n",
     "    bnstdi = hpreact.std(0, keepdim=True)\n",
     "    hpreact = bngain * (hpreact - bnmeani) / bnstdi + bnbias\n",
-    "\n",
     "    with torch.no_grad():\n",
     "        bnmean_running = 0.999 * bnmean_running + 0.001 * bnmeani\n",
     "        bnstd_running = 0.999 * bnstd_running + 0.001 * bnstdi\n",
-    "    \n",
+    "    # Non-linearity\n",
     "    h = torch.tanh(hpreact)\n",
     "    logits = h @ W2 + b2\n",
     "    loss = F.cross_entropy(logits, Yb)\n",
@@ -247,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "id": "cb9b315a-5145-41bc-ad1f-6b6ef59895d0",
    "metadata": {
     "scrolled": true
@@ -256,10 +266,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f04a8ac6250>]"
+       "[<matplotlib.lines.Line2D at 0x7f04a8a0b700>]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -280,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "id": "7ab5c6c0-8cf3-4576-90b4-21529642bb8e",
    "metadata": {},
    "outputs": [],
@@ -299,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "id": "3988d1e5-7456-4fbe-ae71-d503e5a64812",
    "metadata": {},
    "outputs": [
@@ -307,8 +317,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train 1.9245892763137817\n",
-      "val 2.024909496307373\n"
+      "train 1.924872636795044\n",
+      "val 2.026423454284668\n"
      ]
     }
    ],
@@ -324,7 +334,8 @@
     "    embcat = emb.view(emb.shape[0], -1)\n",
     "    hpreact = embcat @ W1 + b1\n",
     "    #hpreact = bngain * (hpreact - hpreact.mean(0, keepdim=True)) / hpreact.std(0, keepdim=True) + bnbias\n",
-    "    hpreact = bngain * (hpreact - bnmean) / bnstd + bnbias\n",
+    "    #hpreact = bngain * (hpreact - bnmean) / bnstd + bnbias\n",
+    "    hpreact = bngain * (hpreact - bnmean_running) / bnstd_running + bnbias\n",
     "    h = torch.tanh(hpreact)\n",
     "    logits = h @ W2 + b2    \n",
     "    loss = F.cross_entropy(logits, y)\n",
@@ -336,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "15549a6b-4168-46dd-a617-5517dc22f4a5",
    "metadata": {},
    "outputs": [
@@ -344,26 +355,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sbinndhar.\n",
-      "trtillahcsanassseellothnde.\n",
-      "tjgglyonnae.\n",
-      "lllllyoh.\n",
-      "maswesktmarcaustor.\n",
-      "tzillotastelyl.\n",
-      "tshullwahn.\n",
-      "tthilitnrce.\n",
-      "luasvleisnsh.\n",
-      "basltzillonsunshbis.\n",
-      "stephlah.\n",
-      "thgllshlyees.\n",
-      "trbentleigtbaconuskahndnnichtrlsse.\n",
-      "tyastlingilncrels.\n",
-      "pstmastor.\n",
-      "tthfrlyahmbnsellluisnavarishelllindyne.\n",
-      "ttolswatbrighclflewisnnakslyssttfa.\n",
-      "tstletga.\n",
-      "sttillaromrne.\n",
-      "twallzahsost.\n"
+      "tsxkilbi.\n",
+      "tllalexs.\n",
+      "thugrssosllenders.\n",
+      "tlishbrthellettegluggsrsemmahsxshcharmostiffusteslumshsdesteel.\n",
+      "blettzynsesdhnochuwessanfandullistere.\n",
+      "trnleeggsssille.\n",
+      "tjiffangshswanztdwusumskfnaziellufesetzxptubtuxtofin.\n",
+      "stleks.\n",
+      "ttecsransshesstmuhtangras.\n",
+      "strynzhan.\n",
+      "tthlillahnry.\n",
+      "ttaelgggblaspillnossoshffanif.\n",
+      "stulllousrthvik.\n",
+      "tubdullah.\n",
+      "tsyli.\n",
+      "tstlevghtos.\n",
+      "szailyahnri.\n",
+      "brttglkyngslucsltymstra.\n",
+      "tthliannu.\n",
+      "trtatrshukrrstdolslynn.\n"
      ]
     }
    ],
